# nix-config-parser

./: Cargo.toml  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  update.yml
examples/: parse-file-cli.rs
src/: lib.rs  main.rs
