[package]
name = "nix-config-parser"
authors = ["Cole Helbling <cole.helbling@determinate.systems>"]
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
tempfile = "3.3.0"
