[package]
name = "nix-config-parser"
description = "A simple parser for the Nix configuration file format"
version = "0.1.3"
edition = "2021"
resolver = "2"
license = "LGPL-2.1"
repository = "https://github.com/DeterminateSystems/nix-config-parser"
documentation = "https://docs.rs/nix-config-parser/latest/nix_config_parser"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror = "1.0.38"

[dev-dependencies]
tempfile = "3.6.0"
