[package]
name = "nix-config-parser"
description = "A simple parser for the Nix configuration file format"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "LGPL-2.1"
repository = "https://github.com/DeterminateSystems/nix-config-parser"
documentation = "https://docs.rs/nix-config-parser/latest/nix_config_parser"

[features]
serde = ["dep:serde", "indexmap/serde"]

[dependencies]
indexmap = "2"
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror = "1.0.59"

[dev-dependencies]
tempfile = "3.4.0"
